# MC3

./: .gitignore  CMakeLists.txt  README.md
scripts/: README.md  analysis.py  analysis_cpu_gpu_time_switch.py  analysis_microsecond.py  buffer_size_experiments.py  cpu_gpu.py  cpu_gpu_time_switch.py  early_complete_contention.py  emc_values.py  gaussian_noise_experiments.py  print_bandwidth.py  receiver_sensitivity.py  transmit_rate_experiments.py
src/GPU_samples/: bandwidthTest.cu  readme.txt
src/experiments/receiver/: README.md  analyze.py  bandwidth.csv  main.cpp  merge_logs.py
src/experiments/timing-consistency/: README.md  analyze.py  main.cpp
src/experiments/transmitter/: main.cpp
src/lib/: contention_generator.cpp  contention_generator.hpp  precise_sleep.cpp  precise_sleep.hpp
